[package]
name = "sorteraw"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true
panic = "abort"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
dashmap = "6.1.0"
rayon = "1.11.0"
time = { version = "0.3.43", features = ["formatting", "macros"] }
